--- a/index.html
+++ b/index.html
@@ -4,6 +4,32 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gotham</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <header class="page-header">
+      <div class="wrapper">
+        <nav class="left-nav">
+          <ul>
+            <li><a href="#">Culture</a></li>
+            <li><a href="#">Events</a></li>
+            <li><a href="#">Food</a></li>
+          </ul>
+        </nav>
+        <div class="header-logo">
+          <img src="./images/logo.png" alt="logo" />
+        </div>
+        <nav class="right-nav">
+          <ul>
+            <li><a href="#">Travelling</a></li>
+            <li><a href="#">Fashion</a></li>
+            <li><a href="#">Other</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <main></main>
+    <aside class="right-sidebar"></aside>
+    <footer class="page-footer"></footer>
+  </body>
 </html>
